--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>TupperWeb</title>
   <link rel="stylesheet" href="./styles.css">
-  <link rel="stylesheet" href="https://www.chtitegalaxie.fr:5051/static/styles.css">
+  <link rel="stylesheet" href="https://galaxie.ddnsking.com:5051/static/styles.css">
   <script defer src="./script.js"></script>
 </head>
 <body>
